--- a/Exercises/Week 1 - Word Embeddings/Week-1.ipynb
+++ b/Exercises/Week 1 - Word Embeddings/Week-1.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,9 +126,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['human', 'interface', 'computer'],\n",
+       " ['survey', 'user', 'computer', 'system', 'response', 'time'],\n",
+       " ['eps', 'user', 'interface', 'system'],\n",
+       " ['system', 'human', 'system', 'eps'],\n",
+       " ['user', 'response', 'time'],\n",
+       " ['trees'],\n",
+       " ['graph', 'trees'],\n",
+       " ['graph', 'minors', 'trees'],\n",
+       " ['graph', 'minors', 'survey']]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# bag of words for each sentence in toy dataset (imported from the gensim library in cell 2)\n",
     "common_texts"
@@ -155,19 +174,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "#instantiate and train model\n",
-    "# w2v_model =  ...."
+    "w2v_model = Word2Vec(sentences=common_texts, vector_size=10, window=5, min_count=1, workers=4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'system': 0,\n",
+       " 'graph': 1,\n",
+       " 'trees': 2,\n",
+       " 'user': 3,\n",
+       " 'minors': 4,\n",
+       " 'eps': 5,\n",
+       " 'time': 6,\n",
+       " 'response': 7,\n",
+       " 'survey': 8,\n",
+       " 'computer': 9,\n",
+       " 'interface': 10,\n",
+       " 'human': 11}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# dict with vocabulary frequencies\n",
     "words = w2v_model.wv.key_to_index\n",
@@ -183,9 +224,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The vector length of the word is 10.\n"
+     ]
+    }
+   ],
    "source": [
     "# explore embeddings\n",
     "vector = w2v_model.wv['computer']  # get numpy vector of a word\n",
@@ -206,12 +255,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('eps', 0.2914133667945862),\n",
+       " ('trees', 0.05541810393333435),\n",
+       " ('minors', 0.042647670954465866),\n",
+       " ('survey', -0.02176341600716114),\n",
+       " ('interface', -0.15233567357063293),\n",
+       " ('time', -0.19863171875476837),\n",
+       " ('response', -0.2179230898618698),\n",
+       " ('human', -0.22643756866455078),\n",
+       " ('user', -0.23134341835975647),\n",
+       " ('graph', -0.5145737528800964)]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# print most similar words\n",
-    "# ..."
+    "w2v_model.wv.most_similar('computer')"
    ]
   },
   {
@@ -1078,7 +1147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.13"
   },
   "vscode": {
    "interpreter": {
