--- a/Exercises/Week 2 - N-gram & Neural Language Models/Week-2-Solutions.ipynb
+++ b/Exercises/Week 2 - N-gram & Neural Language Models/Week-2-Solutions.ipynb
@@ -79,7 +79,22 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/emmaboehly/programmation/anaconda3/envs/NLP/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Downloading data: 100%|██████████| 2.96M/2.96M [00:00<00:00, 7.30MB/s]\n",
+      "Downloading data: 100%|██████████| 262k/262k [00:00<00:00, 1.20MB/s]\n",
+      "Downloading data: 100%|██████████| 236k/236k [00:00<00:00, 1.75MB/s]\n",
+      "Generating train split: 100%|██████████| 42068/42068 [00:00<00:00, 457226.47 examples/s]\n",
+      "Generating test split: 100%|██████████| 3761/3761 [00:00<00:00, 978644.91 examples/s]\n",
+      "Generating validation split: 100%|██████████| 3370/3370 [00:00<00:00, 310600.43 examples/s]\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import datasets\n",
@@ -99,6 +114,27 @@
    "metadata": {},
    "source": [
     "#### Let's have a look at a few samples of the training dataset (and also the structure of the dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "4ab0442d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['', '96', 'ammunition', 'packing', 'boxes', '\\n']\n",
+      "['96', 'ammunition', 'packing', 'boxes']\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = ' 96 ammunition packing boxes \\n'\n",
+    "print(s.split(' '))\n",
+    "print(s.split())"
    ]
   },
   {
@@ -1842,7 +1878,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.13"
   },
   "vscode": {
    "interpreter": {
