--- a/Exercises/Week 2 - N-gram & Neural Language Models/Week-2.ipynb
+++ b/Exercises/Week 2 - N-gram & Neural Language Models/Week-2.ipynb
@@ -30,13 +30,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "98eb6b6c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: torch in /Users/emmaboehly/programmation/anaconda3/envs/NLP/lib/python3.10/site-packages (from -r requirements.txt (line 1)) (2.2.1)\n",
+      "Requirement already satisfied: numpy in /Users/emmaboehly/programmation/anaconda3/envs/NLP/lib/python3.10/site-packages (from -r requirements.txt (line 2)) (1.26.4)\n",
+      "Collecting datasets (from -r requirements.txt (line 3))\n",
+      "  Downloading datasets-2.18.0-py3-none-any.whl.metadata (20 kB)\n",
+      "Requirement already satisfied: filelock in /Users/emmaboehly/programmation/anaconda3/envs/NLP/lib/python3.10/site-packages (from torch->-r requirements.txt (line 1)) (3.13.1)\n",
+      "Requirement already satisfied: typing-extensions>=4.8.0 in /Users/emmaboehly/programmation/anaconda3/envs/NLP/lib/python3.10/site-packages (from torch->-r requirements.txt (line 1)) (4.10.0)\n",
+      "Requirement already satisfied: sympy in /Users/emmaboehly/programmation/anaconda3/envs/NLP/lib/python3.10/site-packages (from torch->-r requirements.txt (line 1)) (1.12)\n",
+      "Requirement already satisfied: networkx in /Users/emmaboehly/programmation/anaconda3/envs/NLP/lib/python3.10/site-packages (from torch->-r requirements.txt (line 1)) (3.2.1)\n",
+      "Requirement already satisfied: jinja2 in /Users/emmaboehly/programmation/anaconda3/envs/NLP/lib/python3.10/site-packages (from torch->-r requirements.txt (line 1)) (3.1.3)\n",
+      "Requirement already satisfied: fsspec in /Users/emmaboehly/programmation/anaconda3/envs/NLP/lib/python3.10/site-packages (from torch->-r requirements.txt (line 1)) (2024.2.0)\n",
+      "Collecting pyarrow>=12.0.0 (from datasets->-r requirements.txt (line 3))\n",
+      "  Downloading pyarrow-15.0.0-cp310-cp310-macosx_10_15_x86_64.whl.metadata (3.0 kB)\n",
+      "Collecting pyarrow-hotfix (from datasets->-r requirements.txt (line 3))\n",
+      "  Downloading pyarrow_hotfix-0.6-py3-none-any.whl.metadata (3.6 kB)\n",
+      "Collecting dill<0.3.9,>=0.3.0 (from datasets->-r requirements.txt (line 3))\n",
+      "  Downloading dill-0.3.8-py3-none-any.whl.metadata (10 kB)\n",
+      "Requirement already satisfied: pandas in /Users/emmaboehly/programmation/anaconda3/envs/NLP/lib/python3.10/site-packages (from datasets->-r requirements.txt (line 3)) (2.2.1)\n",
+      "Collecting requests>=2.19.0 (from datasets->-r requirements.txt (line 3))\n",
+      "  Using cached requests-2.31.0-py3-none-any.whl.metadata (4.6 kB)\n",
+      "Requirement already satisfied: tqdm>=4.62.1 in /Users/emmaboehly/programmation/anaconda3/envs/NLP/lib/python3.10/site-packages (from datasets->-r requirements.txt (line 3)) (4.66.2)\n",
+      "Collecting xxhash (from datasets->-r requirements.txt (line 3))\n",
+      "  Downloading xxhash-3.4.1-cp310-cp310-macosx_10_9_x86_64.whl.metadata (12 kB)\n",
+      "Collecting multiprocess (from datasets->-r requirements.txt (line 3))\n",
+      "  Downloading multiprocess-0.70.16-py310-none-any.whl.metadata (7.2 kB)\n",
+      "Collecting aiohttp (from datasets->-r requirements.txt (line 3))\n",
+      "  Downloading aiohttp-3.9.3-cp310-cp310-macosx_10_9_x86_64.whl.metadata (7.4 kB)\n",
+      "Collecting huggingface-hub>=0.19.4 (from datasets->-r requirements.txt (line 3))\n",
+      "  Downloading huggingface_hub-0.21.4-py3-none-any.whl.metadata (13 kB)\n",
+      "Requirement already satisfied: packaging in /Users/emmaboehly/programmation/anaconda3/envs/NLP/lib/python3.10/site-packages (from datasets->-r requirements.txt (line 3)) (23.2)\n",
+      "Collecting pyyaml>=5.1 (from datasets->-r requirements.txt (line 3))\n",
+      "  Downloading PyYAML-6.0.1-cp310-cp310-macosx_10_9_x86_64.whl.metadata (2.1 kB)\n",
+      "Collecting aiosignal>=1.1.2 (from aiohttp->datasets->-r requirements.txt (line 3))\n",
+      "  Downloading aiosignal-1.3.1-py3-none-any.whl.metadata (4.0 kB)\n",
+      "Collecting attrs>=17.3.0 (from aiohttp->datasets->-r requirements.txt (line 3))\n",
+      "  Downloading attrs-23.2.0-py3-none-any.whl.metadata (9.5 kB)\n",
+      "Collecting frozenlist>=1.1.1 (from aiohttp->datasets->-r requirements.txt (line 3))\n",
+      "  Downloading frozenlist-1.4.1-cp310-cp310-macosx_10_9_x86_64.whl.metadata (12 kB)\n",
+      "Collecting multidict<7.0,>=4.5 (from aiohttp->datasets->-r requirements.txt (line 3))\n",
+      "  Downloading multidict-6.0.5-cp310-cp310-macosx_10_9_x86_64.whl.metadata (4.2 kB)\n",
+      "Collecting yarl<2.0,>=1.0 (from aiohttp->datasets->-r requirements.txt (line 3))\n",
+      "  Downloading yarl-1.9.4-cp310-cp310-macosx_10_9_x86_64.whl.metadata (31 kB)\n",
+      "Collecting async-timeout<5.0,>=4.0 (from aiohttp->datasets->-r requirements.txt (line 3))\n",
+      "  Downloading async_timeout-4.0.3-py3-none-any.whl.metadata (4.2 kB)\n",
+      "Collecting charset-normalizer<4,>=2 (from requests>=2.19.0->datasets->-r requirements.txt (line 3))\n",
+      "  Using cached charset_normalizer-3.3.2-cp310-cp310-macosx_10_9_x86_64.whl.metadata (33 kB)\n",
+      "Collecting idna<4,>=2.5 (from requests>=2.19.0->datasets->-r requirements.txt (line 3))\n",
+      "  Using cached idna-3.6-py3-none-any.whl.metadata (9.9 kB)\n",
+      "Collecting urllib3<3,>=1.21.1 (from requests>=2.19.0->datasets->-r requirements.txt (line 3))\n",
+      "  Downloading urllib3-2.2.1-py3-none-any.whl.metadata (6.4 kB)\n",
+      "Collecting certifi>=2017.4.17 (from requests>=2.19.0->datasets->-r requirements.txt (line 3))\n",
+      "  Using cached certifi-2024.2.2-py3-none-any.whl.metadata (2.2 kB)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /Users/emmaboehly/programmation/anaconda3/envs/NLP/lib/python3.10/site-packages (from jinja2->torch->-r requirements.txt (line 1)) (2.1.5)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/emmaboehly/programmation/anaconda3/envs/NLP/lib/python3.10/site-packages (from pandas->datasets->-r requirements.txt (line 3)) (2.9.0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /Users/emmaboehly/programmation/anaconda3/envs/NLP/lib/python3.10/site-packages (from pandas->datasets->-r requirements.txt (line 3)) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /Users/emmaboehly/programmation/anaconda3/envs/NLP/lib/python3.10/site-packages (from pandas->datasets->-r requirements.txt (line 3)) (2024.1)\n",
+      "Requirement already satisfied: mpmath>=0.19 in /Users/emmaboehly/programmation/anaconda3/envs/NLP/lib/python3.10/site-packages (from sympy->torch->-r requirements.txt (line 1)) (1.3.0)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/emmaboehly/programmation/anaconda3/envs/NLP/lib/python3.10/site-packages (from python-dateutil>=2.8.2->pandas->datasets->-r requirements.txt (line 3)) (1.16.0)\n",
+      "Downloading datasets-2.18.0-py3-none-any.whl (510 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m510.5/510.5 kB\u001b[0m \u001b[31m10.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hDownloading dill-0.3.8-py3-none-any.whl (116 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m116.3/116.3 kB\u001b[0m \u001b[31m9.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading aiohttp-3.9.3-cp310-cp310-macosx_10_9_x86_64.whl (397 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m397.9/397.9 kB\u001b[0m \u001b[31m23.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading huggingface_hub-0.21.4-py3-none-any.whl (346 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m346.4/346.4 kB\u001b[0m \u001b[31m17.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading pyarrow-15.0.0-cp310-cp310-macosx_10_15_x86_64.whl (27.1 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m27.1/27.1 MB\u001b[0m \u001b[31m22.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hDownloading PyYAML-6.0.1-cp310-cp310-macosx_10_9_x86_64.whl (189 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m189.4/189.4 kB\u001b[0m \u001b[31m5.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hUsing cached requests-2.31.0-py3-none-any.whl (62 kB)\n",
+      "Downloading multiprocess-0.70.16-py310-none-any.whl (134 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m134.8/134.8 kB\u001b[0m \u001b[31m8.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading pyarrow_hotfix-0.6-py3-none-any.whl (7.9 kB)\n",
+      "Downloading xxhash-3.4.1-cp310-cp310-macosx_10_9_x86_64.whl (31 kB)\n",
+      "Downloading aiosignal-1.3.1-py3-none-any.whl (7.6 kB)\n",
+      "Downloading async_timeout-4.0.3-py3-none-any.whl (5.7 kB)\n",
+      "Downloading attrs-23.2.0-py3-none-any.whl (60 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m60.8/60.8 kB\u001b[0m \u001b[31m6.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hUsing cached certifi-2024.2.2-py3-none-any.whl (163 kB)\n",
+      "Using cached charset_normalizer-3.3.2-cp310-cp310-macosx_10_9_x86_64.whl (122 kB)\n",
+      "Downloading frozenlist-1.4.1-cp310-cp310-macosx_10_9_x86_64.whl (53 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m53.8/53.8 kB\u001b[0m \u001b[31m5.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hUsing cached idna-3.6-py3-none-any.whl (61 kB)\n",
+      "Downloading multidict-6.0.5-cp310-cp310-macosx_10_9_x86_64.whl (30 kB)\n",
+      "Downloading urllib3-2.2.1-py3-none-any.whl (121 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m121.1/121.1 kB\u001b[0m \u001b[31m12.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading yarl-1.9.4-cp310-cp310-macosx_10_9_x86_64.whl (81 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m81.2/81.2 kB\u001b[0m \u001b[31m7.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: xxhash, urllib3, pyyaml, pyarrow-hotfix, pyarrow, multidict, idna, frozenlist, dill, charset-normalizer, certifi, attrs, async-timeout, yarl, requests, multiprocess, aiosignal, huggingface-hub, aiohttp, datasets\n",
+      "Successfully installed aiohttp-3.9.3 aiosignal-1.3.1 async-timeout-4.0.3 attrs-23.2.0 certifi-2024.2.2 charset-normalizer-3.3.2 datasets-2.18.0 dill-0.3.8 frozenlist-1.4.1 huggingface-hub-0.21.4 idna-3.6 multidict-6.0.5 multiprocess-0.70.16 pyarrow-15.0.0 pyarrow-hotfix-0.6 pyyaml-6.0.1 requests-2.31.0 urllib3-2.2.1 xxhash-3.4.1 yarl-1.9.4\n"
+     ]
+    }
+   ],
    "source": [
     "# install the libraries if needed using the requirements.txt file\n",
-    "# !pip install -r requirements.txt"
+    "#!pip install -r requirements.txt"
    ]
   },
   {
@@ -1283,7 +1380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.10.13"
   },
   "vscode": {
    "interpreter": {
